<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_modules"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_modules" />
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_sessions" />
        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/ic_student"
            android:title="@string/menu_students" />
        <item
            android:id="@+id/nav_mentors"
            android:icon="@drawable/ic_mentor"
            android:title="@string/menu_mentors" />
    </group>

    <group android:id="@+id/nav_group_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_account" />
    </group>
</menu>
