<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_modules">

    <fragment
        android:id="@+id/nav_student_form"
        android:name="edu.gatech.edtech.culturechatapp.ui.student.StudentFormFragment"
        android:label="Student Form">
        <argument
            android:name="email"
            android:defaultValue="Student email"
            app:argType="string" />
        <argument
            android:name="name"
            android:defaultValue="Student name"
            app:argType="string" />
        <argument
            android:name="id"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_student_form_to_nav_students"
            app:destination="@id/nav_students" />
        <argument
            android:name="mentor"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="possible_mentors"
            app:argType="java.util.ArrayList"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_student_form_to_nav_mentors"
            app:destination="@id/nav_mentors" />
        <argument
            android:name="recordType"
            app:argType="string"
            android:defaultValue="student" />
    </fragment>
    <fragment
        android:id="@+id/nav_modules"
        android:name="edu.gatech.edtech.culturechatapp.ui.module.ModulesFragment"
        android:label="@string/menu_modules"
        tools:layout="@layout/fragment_modules">
        <action
            android:id="@+id/nav_module_to_form"
            app:destination="@id/nav_module_form" />
    </fragment>

    <fragment
        android:id="@+id/nav_module_form"
        android:name="edu.gatech.edtech.culturechatapp.ui.module.ModuleFormFragment"
        android:label="Module Form"
        tools:layout="@layout/module_form">
        <argument
            android:name="short_title"
            app:argType="string"
            android:defaultValue="Short module title" />
        <argument
            android:name="long_title"
            app:argType="string"
            android:defaultValue="Long module title" />
        <argument
            android:name="description"
            app:argType="string"
            android:defaultValue="Full module description" />
        <action
            android:id="@+id/action_nav_module_form_to_nav_modules"
            app:destination="@id/nav_modules" />
        <argument
            android:name="id"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_students"
        android:name="edu.gatech.edtech.culturechatapp.ui.student.StudentFragment"
        android:label="@string/menu_students"
        tools:layout="@layout/fragment_students" >
        <action
            android:id="@+id/nav_student_to_form"
            app:destination="@id/nav_student_form" />
    </fragment>

    <fragment
        android:id="@+id/nav_mentors"
        android:name="edu.gatech.edtech.culturechatapp.ui.mentor.MentorFragment"
        android:label="@string/menu_mentors"
        tools:layout="@layout/fragment_mentors" >
        <action
            android:id="@+id/action_nav_mentors_to_nav_student_form"
            app:destination="@id/nav_student_form" />
    </fragment>

</navigation>